--- a/.github/workflows/dnsci-terraform.yml
+++ b/.github/workflows/dnsci-terraform.yml
@@ -56,3 +56,26 @@ jobs:
       - name: Terraform validate
         working-directory: ${{ matrix.dir }}
         run: terraform validate
+
+
+  terraform-docs:
+    name: terraform-docs (modules)
+    runs-on: ubuntu-latest
+    needs: terraform-fmt
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Render terraform docs
+        uses: terraform-docs/gh-actions@v1.4.1
+        with:
+          working-dir: modules
+          output-file: README.md
+          output-method: inject
+          git-push: "false"
+
+      - name: Fail if docs changed
+        run: |
+          git diff --exit-code
+
