--- a/.github/workflows/dnsci-terraform.yml
+++ b/.github/workflows/dnsci-terraform.yml
@@ -152,3 +152,59 @@ jobs:
       - name: Fail if docs changed
         run: |
           git diff --exit-code
+
+
+  terraform-validate-modules-latest:
+    name: terraform validate (modules) (latest)
+    runs-on: ubuntu-latest
+    needs: terraform-fmt
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform (latest)
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
+          terraform_wrapper: false
+
+      - name: Terraform init (no backend)
+        working-directory: modules
+        run: terraform init -backend=false
+
+      - name: Terraform validate
+        working-directory: modules
+        run: terraform validate
+
+
+  terraform-validate-examples-latest:
+    name: terraform validate (examples) (latest)
+    runs-on: ubuntu-latest
+    needs: terraform-fmt
+
+    strategy:
+      fail-fast: false
+      matrix:
+        dir:
+          - example/both-zone-vpc
+          - example/zone-only
+          - example/vpc-only
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform (latest)
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
+          terraform_wrapper: false
+
+      - name: Terraform init (no backend)
+        working-directory: ${{ matrix.dir }}
+        run: terraform init -backend=false
+
+      - name: Terraform validate
+        working-directory: ${{ matrix.dir }}
+        run: terraform validate
+
