--- a/.github/workflows/dnsci-terraform.yml
+++ b/.github/workflows/dnsci-terraform.yml
@@ -208,3 +208,56 @@ jobs:
         working-directory: ${{ matrix.dir }}
         run: terraform validate
 
+
+  terraform-plan-examples-latest:
+    name: terraform plan (examples) (latest)
+    runs-on: ubuntu-latest
+    needs:
+      - terraform-fmt
+      - terraform-validate-modules-latest
+      - terraform-validate-examples-latest
+
+    # Don't run AWS-authenticated job for fork PRs
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+
+    strategy:
+      fail-fast: false
+      matrix:
+        dir:
+          - example/both-zone-vpc
+          - example/zone-only
+          - example/vpc-only
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Setup Terraform (latest)
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
+          terraform_wrapper: false
+
+      - name: Terraform init (no backend)
+        working-directory: ${{ matrix.dir }}
+        run: terraform init -backend=false
+
+      - name: Terraform plan
+        working-directory: ${{ matrix.dir }}
+        env:
+          TF_IN_AUTOMATION: "true"
+          TF_VAR_aws_region: ${{ vars.TF_VAR_aws_region }}
+          TF_VAR_free_zone_id: ${{ vars.TF_VAR_free_zone_id }}
+          TF_VAR_free_log_group_name: ${{ vars.TF_VAR_free_log_group_name }}
+          TF_VAR_dns_alert_sns_arn: ${{ vars.TF_VAR_dns_alert_sns_arn }}
+          TF_VAR_prefix: ${{ vars.TF_VAR_prefix }}
+          TF_VAR_free_vpc_id: ${{ vars.TF_VAR_free_vpc_id }}
+        run: terraform plan -lock=false -input=false -refresh=false
+
+
