--- a/.github/workflows/dnsci-tfsec.yml
+++ b/.github/workflows/dnsci-tfsec.yml
@@ -16,6 +16,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run tfsec
-        uses: aquasecurity/tfsec-action@v1.0.3
+        uses: aquasecurity/tfsec-action@b466648d6e39e7c75324f25d83891162a721f2d6
         with:
           soft_fail: false
