--- a/.github/workflows/dnsci-terraform.yml
+++ b/.github/workflows/dnsci-terraform.yml
@@ -89,7 +89,10 @@ jobs:
       - terraform-validate-examples
 
     # Don't run AWS-authenticated job for fork PRs
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    if: |
+  (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
+  && github.actor != 'dependabot[bot]'
+
 
     strategy:
       fail-fast: false
@@ -218,7 +221,10 @@ jobs:
       - terraform-validate-examples-latest
 
     # Don't run AWS-authenticated job for fork PRs
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    if: |
+  (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
+  && github.actor != 'dependabot[bot]'
+
 
     strategy:
       fail-fast: false
