--- a/.github/workflows/dnsci-terraform.yml
+++ b/.github/workflows/dnsci-terraform.yml
@@ -90,16 +90,11 @@ jobs:
 
     # Don't run AWS-authenticated job for fork PRs
     if: |
-      (
-        github.event_name == 'pull_request'
-        && github.event.pull_request.head.repo.full_name == github.repository
-        && github.event.pull_request.user.login != 'dependabot[bot]'
-      )
-      || (
-        github.event_name == 'push'
-        && github.actor != 'dependabot[bot]'
-        && github.actor != 'dependabot'
-      )
+      github.event_name == 'pull_request'
+      && github.event.pull_request.head.repo.full_name == github.repository
+      && github.event.pull_request.user.login != 'dependabot[bot]'
+      && github.event.pull_request.user.login != 'renovate[bot]'
+
     strategy:
       fail-fast: false
       matrix:
@@ -228,16 +223,11 @@ jobs:
 
     # Don't run AWS-authenticated job for fork PR
     if: |
-      (
-        github.event_name == 'pull_request'
-        && github.event.pull_request.head.repo.full_name == github.repository
-        && github.event.pull_request.user.login != 'dependabot[bot]'
-      )
-      || (
-        github.event_name == 'push'
-        && github.actor != 'dependabot[bot]'
-        && github.actor != 'dependabot'
-      )
+      github.event_name == 'pull_request'
+      && github.event.pull_request.head.repo.full_name == github.repository
+      && github.event.pull_request.user.login != 'dependabot[bot]'
+      && github.event.pull_request.user.login != 'renovate[bot]'
+
     strategy:
       fail-fast: false
       matrix:
